[gd_scene load_steps=13 format=3 uid="uid://e1w14xaoi3hg"]

[ext_resource type="Script" uid="uid://dn5a0c1un1a0p" path="res://scripts/main_menu.gd" id="1_8ln24"]
[ext_resource type="FontFile" uid="uid://dq5mvqstrqkxb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://dc4j3qsckdei4" path="res://assets/sprites/bg.png" id="2_tbmy8"]
[ext_resource type="Texture2D" uid="uid://dam3ux7qm1s7m" path="res://assets/sprites/cock.png" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://dwsol2odk3neb" path="res://assets/cutscenes/icon.png.png" id="3_tbmy8"]
[ext_resource type="FontFile" uid="uid://bd8b3740cfscc" path="res://assets/fonts/PixelOperator8.ttf" id="4_wu84c"]
[ext_resource type="PackedScene" uid="uid://bdrc4sw3rv5s5" path="res://scenes/options_menu.tscn" id="6_oa1go"]
[ext_resource type="AudioStream" uid="uid://cg6ma0snkoo0v" path="res://assets/cutscenes/Looping Tela Inicial.mp3" id="7_oa1go"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("2_tbmy8")
modulate_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.310617, 0.310617, 0.310617, 0.47451)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.431373)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0, 0, 0, 0.47451)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.431373)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.905435, 0.156124, 0.208378, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.180392, 0.180392, 0.180392, 0.666667)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.431373)
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_8ln24")

[node name="Bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="Logo" type="TextureRect" parent="Bg"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -267.0
offset_top = -77.0
offset_right = 2433.0
offset_bottom = 2623.0
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_tbmy8")

[node name="Cock" type="TextureRect" parent="Bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 447.0
offset_top = 189.0
offset_right = 874.0
offset_bottom = 774.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00099777
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_8ln24")
flip_h = true

[node name="MainBtns" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -267.5
offset_top = -273.0
offset_right = 267.5
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 13

[node name="StartBtn" type="Button" parent="MainBtns"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Start
"

[node name="OptionsBtn" type="Button" parent="MainBtns"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Options"

[node name="QuitBtn" type="Button" parent="MainBtns"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_l6cm7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Quit
"

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -383.0
offset_top = -312.0
offset_right = 383.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.475206, 0.313036, 0.890994, 1)
theme_override_colors/font_outline_color = Color(0.47451, 0.313726, 0.890196, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 100
text = "RoboCock"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 30
text = "A guerra do galo"
horizontal_alignment = 1

[node name="Options" parent="." instance=ExtResource("6_oa1go")]
layout_mode = 1
offset_top = -136.0
offset_bottom = 202.0

[node name="Bgm" type="AudioStreamPlayer2D" parent="."]
position = Vector2(5, 0)
stream = ExtResource("7_oa1go")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainBtns/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MainBtns/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="MainBtns/QuitBtn" to="." method="_on_quit_btn_pressed"]
